--- a/src/components/CardGroups/CardGroups.css
+++ b/src/components/CardGroups/CardGroups.css
@@ -3,7 +3,6 @@
   border: 1px solid #e1e1e1;
   border-radius: 5px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  justify-content: space-around;
   align-items: center;
   padding: .5rem;
   transition: all 0.3s;
@@ -32,8 +31,10 @@
   margin-left: 1rem;
 }
 
-© h2{
-  margin: 0;
+
+
+h2::first-letter {
+  text-transform: capitalize;
 }
 
 .card__image h2{
