--- a/src/pages/Groups/Groups.css
+++ b/src/pages/Groups/Groups.css
@@ -15,3 +15,67 @@
   gap: 1rem;
 
 }
+
+.group__actions {
+  display: flex;
+  gap: 1rem;
+  margin-bottom: 1rem;
+  justify-content: flex-end;
+}
+
+.group__actions button{
+  margin: 0;
+}
+
+.group__info .group__image {
+  display: flex;
+  height: 100px;
+
+}
+
+.group__image div{
+  border-radius: 3px;
+  display: flex;
+  width: 100px;
+  height: 100px;
+}
+
+.group__image .group__data{
+  display: flex;
+  width: 100%;
+}
+
+.group__image div img{
+  object-fit: contain;
+  margin: auto auto;
+}
+
+.group__data{
+  display: flex;
+  flex-direction: column;
+  margin-left: 1rem;
+}
+
+.group__data button{
+  display: flex;
+  margin: 1rem 0 0;
+
+}
+
+.group__info__expenses {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 1rem;
+  justify-content: space-between;
+  margin-top: 1rem;
+}
+
+.group__info__expenses h3{
+  font-size: 2rem;
+  color: var(--color-secondary);
+}
+
+.group__info__members h3{
+  font-size: 2rem;
+  color: var(--color-secondary);
+}
