--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -5,6 +5,16 @@
   color: #fff;
   cursor: pointer;
   font-size: 1rem;
+  font-weight: bold;
   padding: 0.5rem 1rem;
   transition: all 0.3s;
+}
+
+.button-primary {
+  background-color: var(--color-primary);
+}
+
+.button-secondary {
+  background-color:#fff ;
+  color: var(--color-primary);
 }
