--- a/src/pages/Login/login.css
+++ b/src/pages/Login/login.css
@@ -34,6 +34,7 @@
 
 .login-input {
   background-color: #fff;
+  color: var(--color-primary);
     width: 100%;
     padding: 10px;
     border: 1px solid #ccc;
